separate doc and diagrams

--- a/doc/spec11.tex
+++ b/doc/spec11.tex
@@ -52,7 +52,7 @@
 
 \vskip -1in
 \heol
-\psfig{file=ivoa.ps,width=5.0in}
+\psfig{file=diagrams/ivoa.ps,width=5.0in}
 
 \definecolor{ipink}{rgb}{1.0,0.937,0.957}
 \definecolor{ired}{rgb}{1.0,0.5,0.5}
@@ -306,7 +306,7 @@ version number changed at request of IVOA Doc Coord)
 \begin{figure}[h]
 
 \colorbox{iblue}{
-\psfig{file=sd.eps,width=6.0in}
+\psfig{file=diagrams/sd.eps,width=6.0in}
 }
 \caption{Spectrum DM in IVOA architecture}
 \end{figure}
@@ -399,7 +399,7 @@ version.
 \begin{figure}[h]
 
 \colorbox{iblue}{
-\psfig{file=specumln3.eps,width=6.0in}
+\psfig{file=diagrams/specumln3.eps,width=6.0in}
 }
 
 
@@ -477,7 +477,7 @@ make two separate instances (VO resources).
 \begin{figure}[h]
 
 \colorbox{iblue}{
-\psfig{file=ndataf1.eps,width=6.0in}
+\psfig{file=diagrams/ndataf1.eps,width=6.0in}
 }
 {
 \colorbox{iblue}{
@@ -489,7 +489,7 @@ Figure 2: Diagram for Data object
 }
 
 \colorbox{iblue}{
-\psfig{file=ncharf2.eps,width=6.0in}
+\psfig{file=diagrams/ncharf2.eps,width=6.0in}
 }
 {
 \colorbox{iblue}{
@@ -506,8 +506,7 @@ Figure 3: Diagram for Characterization object
 
 
 \colorbox{iblue}{
-%\psfig{file=spec97f4.eps,width=3.0in}
-\psfig{file=specstc.eps,width=6.0in}
+\psfig{file=diagrams/specstc.eps,width=6.0in}
 }
 {
 \colorbox{iblue}{
@@ -523,7 +522,7 @@ Figure 4: Diagram for CoordSys object
 \begin{figure}[h]
 
 \colorbox{iblue}{
-\psfig{file=specu3f.eps,width=6.0in}
+\psfig{file=diagrams/specu3f.eps,width=6.0in}
 }
 {
 \colorbox{iblue}{
