step toward ivoatex Makefile

--- a/doc/Spectrum.tex
+++ b/doc/Spectrum.tex
@@ -52,7 +52,7 @@
 
 \vskip -1in
 \heol
-\psfig{file=diagrams/ivoa.ps,width=5.0in}
+\psfig{file=ivoa.eps,width=5.0in}
 
 \definecolor{ipink}{rgb}{1.0,0.937,0.957}
 \definecolor{ired}{rgb}{1.0,0.5,0.5}
@@ -182,7 +182,7 @@ This version adds support for:
 \begin{figure}[h]
 
 \colorbox{iblue}{
-\psfig{file=diagrams/sd.eps,width=6.0in}
+\psfig{file=role_diagram.eps,width=6.0in}
 }
 \caption{Spectrum DM in IVOA architecture}
 \end{figure}
