rename files; step toward ivoatex.  no content change

--- a/doc/Spectrum.tex
+++ b/doc/Spectrum.tex
@@ -573,7 +573,7 @@ The FITS serialization is described in more detail in a later section.
 
 %\htwidth{700}
 
-\input{tab.tex}
+\input{fields_table.tex}
 
 %\htwidth{0}
 
@@ -1743,7 +1743,7 @@ http://www.ivoa.net/Documents/latest/UCD.html
 
 \clearpage
 
-\input{specxml2}
+\input{specxml}
 
 
 \clearpage
@@ -1774,6 +1774,6 @@ http://www.ivoa.net/Documents/latest/UCD.html
 }
 
 \clearpage
-\input{fits2}
+\input{specfits}
 
 \end{document}
