--- a/doc/specxml.tex
+++ b/doc/specxml.tex
@@ -694,7 +694,7 @@ value has minOccurs=0 so it can be omitted) -->
 
 \subsection{Instance example}
 
-\input{ex.xml}
+\input{example_xml1.tex}
 
 
 
