--- a/doc/Spectrum.tex
+++ b/doc/Spectrum.tex
@@ -64,7 +64,7 @@
 \par\noindent \htmtitle{IVOA Spectrum Data Model}{Version 1.2}
 \Large
 \vskip 0.1in
-\par\noindent{\bf IVOA Working Draft 2022-06-22}
+\par\noindent{\bf IVOA Working Draft 2022-07-19}
 \color{black}
 \vskip 0.2in
 
@@ -78,7 +78,7 @@ Data Model Working Group
 
 { 
 \color{dblue}
-WD-SpectrumDM-1.2-20220622
+WD-SpectrumDM-1.2-20220719
 %\link{http://www.ivoa.net/Documents/latest/SpectrumDM.html}
 }
 
@@ -173,6 +173,7 @@ This version adds support for:
 \subsection{Change Log}
 
 \begin{verbatim}
+2022 Jul 19 V1.2 Mod 1 - Add spectral order elements
 2022 Jun 22 V1.2 Mod 0 - Document reset to WD for enhancement
 \end{verbatim}
 
@@ -340,7 +341,7 @@ make two separate instances (VO resources).
 % Data diagram:
 \begin{figure}[h]
   \begin{center}
-    \includegraphics[width=4.0in]{diagrams/data.png}
+    \includegraphics[width=5.0in]{diagrams/data.png}
     \caption{Diagram for Data object}
   \end{center}
 \end{figure}
@@ -564,6 +565,23 @@ to the spectrum is rather indirect.
 
 Note 3: `em.wl;obs.atmos' (AWAV) is provided for air wavelengths. The basic spectral
 choices em.wl, em.freq, em.energy are understood to be vacuum values.
+
+\subsubsection{Spectral order}
+
+We define two elements for expressing the spectral order for each point.
+These elements only have meaning for Spectrum.Data (the per-data-point values).
+
+\begin{description}
+\item[order:]  The order number as defined by the instrument configuration.
+  It represents the ‘order of diffraction’, given by the number of wavelengths
+  of monochromatic light where the diffraction occurs with given geometric
+  (eg: angles of rays incidence, reflection) and physical (eg: spacing of
+  the grating grooves) conditions.
+
+\item[relorder:] Relative order is a processing dependent order, typically
+  counting from 1 and increasing as you go either towards red or blue.
+
+\end{description}
 
 
 \begin{flushleft}
