--- a/doc/fields_table.tex
+++ b/doc/fields_table.tex
@@ -209,19 +209,21 @@ Char.SpatialAxis.Resolution     &   SKY\_RES &  pos.angResolution        & Spati
 \hline
 \multicolumn{4}{c}{Data Fields}\\
 \hline
-{\bf Data.FluxAxis.Value      } &TTYPEn = 'FLUX'             & (see sec 4.1, table 3)  & Flux values for points& MAN\\
-Data.FluxAxis.ucd               &TUCDn        &     meta.ucd               & ucd for flux & OPT & Char.FluxAxis.ucd\\
-Data.FluxAxis.unit              &TUNITn        &   meta.unit                 & Unit for flux& OPT & Char.FluxAxis.unit\\
-{\bf Data.SpectralAxis.Value      }   &TTYPEn ='WAVE' & (see sec 4.2, table 2) &  Spectral coordinates for points& MAN & (Char.SpectralAxis.Location)\\
- & or 'ENER' or 'FREQ' &&\\
-{Data.SpectralAxis.ucd    }  &TUCDn                 &   meta.ucd                 & ucd for spectral coord& OPT & Char.SpectralAxis.ucd\\
-{Data.SpectralAxis.unit   } &TUNITn          &         meta.unit           & Unit for spectral coord& OPT & Char.SpectralAxis.unit\\
-{Data.TimeAxis.Value      } & TTYPEn ='TIME'               &                    &Time coordinates for points & OPT & Char.TimeAxis.Location\\
-Data.TimeAxis.ucd           &TUCDn          &        meta.ucd            & ucd for time& OPT  & Char.TimeAxis.ucd\\
-Data.TimeAxis.unit          &TUNITn     &           meta.unit         & Unit for time& OPT &  Char.TimeAxis.Unit\\
-{Data.BackgroundModel.Value      } &TTYPEn='BGFLUX'& &Flux values for points& OPT &  No background model\\
-{Data.BackgroundModel.ucd }        &TUCDn              &       meta.ucd             & ucd for background flux & OPT & Points.FluxAxis.ucd\\
-{Data.BackgroundModel.unit      }  &TUNITn        &           meta.unit         & Unit for background flux& OPT & Points.FluxAxis.unit\\
+{\bf Data.FluxAxis.Value }    &TTYPEn = 'FLUX'     & (see sec 4.1, table 3)  & Flux values for points      & MAN\\
+Data.FluxAxis.ucd             &TUCDn               & meta.ucd                & ucd for flux                & OPT & Char.FluxAxis.ucd\\
+Data.FluxAxis.unit            &TUNITn              & meta.unit               & Unit for flux               & OPT & Char.FluxAxis.unit\\
+{\bf Data.SpectralAxis.Value }&TTYPEn ='WAVE'      & (see sec 4.2, table 2)  & Spectral coordinates for points& MAN & (Char.SpectralAxis.Location)\\
+                              & or 'ENER' or 'FREQ'&                         &\\
+Data.SpectralAxis.ucd         &TUCDn               & meta.ucd                & ucd for spectral coord      & OPT & Char.SpectralAxis.ucd\\
+Data.SpectralAxis.unit        &TUNITn              & meta.unit               & Unit for spectral coord     & OPT & Char.SpectralAxis.unit\\
+Data.SpectralAxis.order       &TTYPEn = 'ORDER'    & instr.order             & Absolute spectral order     & OPT & (None)\\
+Data.SpectralAxis.relorder    &TTYPEn = 'RELORDER' & instr.order             & Relative spectral order     & OPT & (None)\\
+Data.TimeAxis.Value           & TTYPEn ='TIME'     &                         & Time coordinates for points & OPT & Char.TimeAxis.Location\\
+Data.TimeAxis.ucd             &TUCDn               & meta.ucd                & ucd for time                & OPT & Char.TimeAxis.ucd\\
+Data.TimeAxis.unit            &TUNITn              & meta.unit               & Unit for time               & OPT & Char.TimeAxis.Unit\\
+Data.BackgroundModel.Value    &TTYPEn='BGFLUX'     &                         & Flux values for points      & OPT & No background model\\
+Data.BackgroundModel.ucd      &TUCDn               & meta.ucd                & ucd for background flux     & OPT & Points.FluxAxis.ucd\\
+Data.BackgroundModel.unit     &TUNITn              & meta.unit               & Unit for background flux    & OPT & Points.FluxAxis.unit\\
 \end{tabular}
 
 \end{minipage}
