add spectral order elements

--- a/doc/Spectrum.tex
+++ b/doc/Spectrum.tex
@@ -212,6 +212,8 @@ We need to represent a single 1-dimensional spectrum in sufficient
 detail to understand the differences between two spectra of the same
 object and between two spectra of different objects.
 
+We need to be able to identify and distinguish data points by spectral order.
+
 We need to represent time series photometry, with many photometry points
 of the same object at different times.
 
@@ -221,8 +223,6 @@ spectral energy distributions (SED) which
 consist of multiple spectra and photometry points, usually for a single
 object. The 'SED' model will be described in
 a separate document which builds on the structures described here.
-
-TODO: Add new requirements leading to order and limits attributes.
 
 
 \section{Spectral Data Model summary}
