--- a/doc/specfits.tex
+++ b/doc/specfits.tex
@@ -350,31 +350,33 @@ Data model field & FITS keyword& Source & Value if fixed \\
 \multicolumn{4}{c}{ Per-data-point values }\\
 \hline
 \\
-Data.FluxAxis.Value & TTYPEn & S & FLUX\\
-UTYPE of above ...               & TUTYPn & N & 'Spectrum.Data.FluxAxis.Value'\\
-Data.FluxAxis.Unit & TUNITn& S\\
-Data.FluxAxis.ucd &   TUCDn  & N& (same as Char)\\
-Data.FluxAxis.Accuracy.StatError & TTYPEn  & N & ERR\\
+Data.FluxAxis.Value               & TTYPEn & S & FLUX\\
+UTYPE of above ...                & TUTYPn & N & 'Spectrum.Data.FluxAxis.Value'\\
+Data.FluxAxis.Unit                & TUNITn & S\\
+Data.FluxAxis.ucd                 & TUCDn  & N & (same as Char)\\
+Data.FluxAxis.Accuracy.LowerLimit & TTYPEn & N & LOWER\_LIMIT\\
+Data.FluxAxis.Accuracy.UpperLimit & TTYPEn & N & UPPER\_LIMIT\\ 
+Data.FluxAxis.Accuracy.StatError  & TTYPEn & N & ERR\\
 Data.FluxAxis.Accuracy.StatErrLow & TTYPEn & C & ERR\_LO\\
-Data.FluxAxis.Accuracy.StatErrHigh& TTYPEn& C & ERR\_HI\\ 
-Data.FluxAxis.Accuracy.SysError & TTYPEn & C & SYS\_ERR \\
-Data.FluxAxis.Quality & TTYPEn & C & QUALITY\\
-Data.FluxAxis.QualityN & TTYPEn & C & QUALn\\
+Data.FluxAxis.Accuracy.StatErrHigh& TTYPEn & C & ERR\_HI\\ 
+Data.FluxAxis.Accuracy.SysError   & TTYPEn & C & SYS\_ERR \\
+Data.FluxAxis.Quality             & TTYPEn & C & QUALITY\\
+Data.FluxAxis.QualityN            & TTYPEn & C & QUALn\\
  & & & \\
-Data.SpectralAxis.Value  & TTYPEn & S & WAVE,ENER,FREQ\\
-UTYPE of above ...               & TUTYPn & N & 'Spectrum.Data.SpectralAxis.Value'\\
-Data.SpectralAxis.Unit & TUNITn & S & (same as Char)\\
-Data.SpectralAxis.ucd &  TUCDn &N & (same as Char) \\
-Data.SpectralAxis.order  & TTYPEn & N & ORDER\\
-Data.SpectralAxis.relorder  & TTYPEn & N & RELORDER\\
-Data.SpectralAxis.Accuracy.BinSize& TTYPEn & N & WAVE\_BIN,ENER\_BIN, FREQ\_BIN\\
-Data.SpectralAxis.Accuracy.BinLow & TTYPEn & N & WAVE\_LO,ENER\_LO, FREQ\_LO \\
-Data.SpectralAxis.Accuracy.BinHigh& TTYPEn & N & WAVE\_HI,ENER\_HI, FREQ\_HI \\
-Data.SpectralAxis.Accuracy.StatError & TTYPEn& N & WAVE\_ERR,ENER\_ERR, FREQ\_ERR \\
-Data.SpectralAxis.Accuracy.StatErrLow& TTYPEn& N & WAVE\_ELO,ENER\_ELO, FREQ\_ELO \\
-Data.SpectralAxis.Accuracy.StatErrHigh & TTYPEn& N& WAVE\_EHI,ENER\_EHI, FREQ\_EHI \\
-Data.SpectralAxis.Accuracy.SysError & TTYPEn & N &  WAVE\_SYE,ENER\_SYE, FREQ\_SYE \\
-Data.SpectralAxis.Resolution & TTYPEn & N & WAVE\_RES,ENER\_RES, FREQ\_RES \\
+Data.SpectralAxis.Value                & TTYPEn & S & WAVE,ENER,FREQ\\
+UTYPE of above ...                     & TUTYPn & N & 'Spectrum.Data.SpectralAxis.Value'\\
+Data.SpectralAxis.Unit                 & TUNITn & S & (same as Char)\\
+Data.SpectralAxis.ucd                  & TUCDn  & N & (same as Char) \\
+Data.SpectralAxis.order                & TTYPEn & N & ORDER\\
+Data.SpectralAxis.relorder             & TTYPEn & N & RELORDER\\
+Data.SpectralAxis.Accuracy.BinSize     & TTYPEn & N & WAVE\_BIN,ENER\_BIN, FREQ\_BIN\\
+Data.SpectralAxis.Accuracy.BinLow      & TTYPEn & N & WAVE\_LO,ENER\_LO, FREQ\_LO \\
+Data.SpectralAxis.Accuracy.BinHigh     & TTYPEn & N & WAVE\_HI,ENER\_HI, FREQ\_HI \\
+Data.SpectralAxis.Accuracy.StatError   & TTYPEn & N & WAVE\_ERR,ENER\_ERR, FREQ\_ERR \\
+Data.SpectralAxis.Accuracy.StatErrLow  & TTYPEn & N & WAVE\_ELO,ENER\_ELO, FREQ\_ELO \\
+Data.SpectralAxis.Accuracy.StatErrHigh & TTYPEn & N & WAVE\_EHI,ENER\_EHI, FREQ\_EHI \\
+Data.SpectralAxis.Accuracy.SysError    & TTYPEn & N & WAVE\_SYE,ENER\_SYE, FREQ\_SYE \\
+Data.SpectralAxis.Resolution           & TTYPEn & N & WAVE\_RES,ENER\_RES, FREQ\_RES \\
 \\
 \end{tabular}
 \end{minipage}
