--- a/doc/specxml.tex
+++ b/doc/specxml.tex
@@ -235,7 +235,6 @@ value has minOccurs=0 so it can be omitted) -->
 \begin{fmppage}
 \begin{verbatim}
 
-
 <!-- The error model. Bin entries will usually be omitted for the flux coordinate -->
 <xs:complexType name="accuracyType">
 <xs:complexContent mixed="false">
@@ -244,6 +243,8 @@ value has minOccurs=0 so it can be omitted) -->
 <xs:element minOccurs="0" maxOccurs="1" name="BinLow" type="doubleParamType" />
 <xs:element minOccurs="0" maxOccurs="1" name="BinHigh" type="doubleParamType" />
 <xs:element minOccurs="0" maxOccurs="1" name="BinSize" type="doubleParamType" />
+<xs:element minOccurs="0" maxOccurs="1" name="UpperLimit" type="doubleParamType" />
+<xs:element minOccurs="0" maxOccurs="1" name="LowerLimit" type="doubleParamType" />
 <xs:element minOccurs="0" maxOccurs="1" name="StatError" type="doubleParamType" />
 <xs:element minOccurs="0" maxOccurs="1" name="StatErrLow" type="doubleParamType" />
 <xs:element minOccurs="0" maxOccurs="1" name="StatErrHigh" type="doubleParamType" />
@@ -253,7 +254,6 @@ value has minOccurs=0 so it can be omitted) -->
 </xs:extension>
 </xs:complexContent>
 </xs:complexType>
-
 
 <!-- The Field type allows us to define what our axes are -->
 <xs:complexType name="arrayOfFieldType">
