--- a/doc/fields_table.tex
+++ b/doc/fields_table.tex
@@ -216,8 +216,8 @@ Data.FluxAxis.unit            &TUNITn              & meta.unit               & U
                               & or 'ENER' or 'FREQ'&                         &\\
 Data.SpectralAxis.ucd         &TUCDn               & meta.ucd                & ucd for spectral coord      & OPT & Char.SpectralAxis.ucd\\
 Data.SpectralAxis.unit        &TUNITn              & meta.unit               & Unit for spectral coord     & OPT & Char.SpectralAxis.unit\\
-Data.SpectralAxis.order       &TTYPEn = 'ORDER'    & instr.order             & Absolute spectral order     & OPT & (None)\\
-Data.SpectralAxis.relorder    &TTYPEn = 'RELORDER' & instr.order             & Relative spectral order     & OPT & (None)\\
+Data.SpectralAxis.Order       &TTYPEn = 'ORDER'    & instr.order             & Absolute spectral order     & OPT & (None)\\
+Data.SpectralAxis.RelOrder    &TTYPEn = 'RELORDER' & instr.order             & Relative spectral order     & OPT & (None)\\
 Data.TimeAxis.Value           & TTYPEn ='TIME'     &                         & Time coordinates for points & OPT & Char.TimeAxis.Location\\
 Data.TimeAxis.ucd             &TUCDn               & meta.ucd                & ucd for time                & OPT & Char.TimeAxis.ucd\\
 Data.TimeAxis.unit            &TUNITn              & meta.unit               & Unit for time               & OPT & Char.TimeAxis.Unit\\
