--- a/doc/specfits.tex
+++ b/doc/specfits.tex
@@ -367,8 +367,8 @@ Data.SpectralAxis.Value                & TTYPEn & S & WAVE,ENER,FREQ\\
 UTYPE of above ...                     & TUTYPn & N & 'Spectrum.Data.SpectralAxis.Value'\\
 Data.SpectralAxis.Unit                 & TUNITn & S & (same as Char)\\
 Data.SpectralAxis.ucd                  & TUCDn  & N & (same as Char) \\
-Data.SpectralAxis.order                & TTYPEn & N & ORDER\\
-Data.SpectralAxis.relorder             & TTYPEn & N & RELORDER\\
+Data.SpectralAxis.Order                & TTYPEn & N & ORDER\\
+Data.SpectralAxis.RelOrder             & TTYPEn & N & RELORDER\\
 Data.SpectralAxis.Accuracy.BinSize     & TTYPEn & N & WAVE\_BIN,ENER\_BIN, FREQ\_BIN\\
 Data.SpectralAxis.Accuracy.BinLow      & TTYPEn & N & WAVE\_LO,ENER\_LO, FREQ\_LO \\
 Data.SpectralAxis.Accuracy.BinHigh     & TTYPEn & N & WAVE\_HI,ENER\_HI, FREQ\_HI \\
