Fix for Issue #5: ucd assigment for upper/lower limits

--- a/doc/Spectrum.tex
+++ b/doc/Spectrum.tex
@@ -174,6 +174,7 @@ This version adds support for:
 
 \begin{verbatim}
 2023 Apr 27 V1.2 Mod 4 - Correct UTypes in VOTable example 1.
+                         Update UCD assignment for upper/lower limit elements
 2023 Mar 17 V1.2 Mod 3 - Correct case for order and relorder attributes
 2022 Jul 20 V1.2 Mod 2 - Add upper/lower limit elements
 2022 Jul 19 V1.2 Mod 1 - Add spectral order elements
