Migrate to PR status

--- a/doc/Spectrum.tex
+++ b/doc/Spectrum.tex
@@ -64,7 +64,7 @@
 \par\noindent \htmtitle{IVOA Spectrum Data Model}{Version 1.2}
 \Large
 \vskip 0.1in
-\par\noindent{\bf IVOA Working Draft 2023-04-27}
+\par\noindent{\bf IVOA Proposed Recommendation 2023-09-07}
 \color{black}
 \vskip 0.2in
 
@@ -78,7 +78,7 @@ Data Model Working Group
 
 { 
 \color{dblue}
-WD-SpectrumDM-1.2-20230427
+PR-SpectrumDM-1.2-20230907
 %\link{http://www.ivoa.net/Documents/latest/SpectrumDM.html}
 }
 
@@ -120,9 +120,11 @@ spectral or temporal associations.
 
 \subsection*{ Status of this document }
 
-This is an IVOA Working Draft for review by IVOA members and other interested parties.
-It is a draft document and may be updated, replaced, or obsoleted by other documents at any time.
-It is inappropriate to use IVOA Working Drafts as reference materials or to cite them as other than "work in progress".
+This is an IVOA Proposed Recommendation made available for
+public review. It is appropriate to reference this document
+only as a recommended standard that is under review and
+which may be changed before it is accepted as a full
+Recommendation.
 
 The {\bf Virtual Observatory (VO)} is general term for a collection of
 federated resources that can be used to conduct astronomical research,
